Fix icon, borders and spacing

--- a/vscode/webviews/Components/EnhancedContextSettings.module.css
+++ b/vscode/webviews/Components/EnhancedContextSettings.module.css
@@ -185,31 +185,38 @@
 .settings-btns {
     position: relative;
     display: flex;
-    border: unset;
+    color: var(--vscode-editor-foreground);
+    border: 1px solid var(--vscode-button-border, transparent);
+    border-radius: 3px;
 }
 
 .settings-indicator {
-    border-bottom-right-radius: unset;
-    border-top-right-radius: unset;
-    color: var(--vscode-editor-foreground);
-    position: relative;
-    justify-content: center;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .settings-btn {
-    border-bottom-left-radius: unset;
-    border-top-left-radius: unset;
-    color: var(--vscode-editor-foreground);
-    border: unset;
-    border-left: 1px solid var(--vscode-inputOption-hoverBackground);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    padding: 0rem 0.2rem;
-    width: 0.8rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-width: 0;
 }
 
-.settings-indicator i, .settings-btn i {
+/* Active borders on keyboard focus but not mousedown (:focus-visible doesn't seem to work) */
+
+.settings-indicator:focus:not(:active) {
+    border-color: var(--vscode-inputOption-activeBorder);
+}
+
+.settings-btn:focus:not(:active) {
+    border-color: var(--vscode-inputOption-activeBorder);
+    border-left-width: 1px;
+}
+
+.settings-indicator:has(+ .settings-btn:focus:not(:active)) {
+    border-right-width: 0;
+}
+
+.settings-indicator img {
     width: 16px;
     height: 16px;
 }
@@ -217,10 +224,6 @@
 .settings-indicator-active {
     color: var(--vscode-inputOption-activeForeground);
     background-color: var(--vscode-inputOption-activeBackground);
-}
-
-.settings-btn-active, .settings-indicator:focus, .settings-btn:focus {
-    outline: 2px solid var(--vscode-inputOption-activeBorder);
 }
 
 .popup .hint {
